--- a/Cargo.toml
+++ b/Cargo.toml
@@ -12,6 +12,7 @@ default = ["console_error_panic_hook"]
 [dependencies]
 cfg-if = "0.1.2"
 wasm-bindgen = "0.2"
+js-sys = "0.3.8"
 
 console_error_panic_hook = { version = "0.1.1", optional = true }
 
